<resources>
    <string name="app_name">GEULA SHOSHAN APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="watch_tavels">Watch Travels</string>
    <string name="add_tavels">Add Travel Request</string>
    <string name="title_travel_list">travels</string>
    <string name="title_travel_detail">travel Detail</string>
    <string name="my_travels">My Travels</string>
    <string name="enter_client_name">Enter Client Name</string>
    <string name="phone_number">Phone number</string>
    <string name="select_dates">Selected Date</string>
    <string name="number_of_passengers">Number of Passengers</string>
    <string name="write_your_email">Write your email</string>
    <string name="from_address">From address</string>
    <string name="to_address">To address</string>
    <string name="accept">Accept</string>
    <string name="not_accepted_yet">Not accepted yet</string>
    <string name="accepted">Accepted</string>
    <string name="administrator">Administrator</string>
</resources>