<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_departure_board_24"
            android:title="@string/add_tavels"
            />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_baseline_queue_24"
            android:title="@string/watch_tavels" />
        <item
            android:id="@+id/nav_my_travels"
            android:icon="@drawable/ic_baseline_room_24"
            android:title="@string/my_travels" />
        <item
            android:id="@+id/nav_administrator"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/administrator" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->

    </group>
</menu>